Fixing contrast

--- a/style.scss
+++ b/style.scss
@@ -20,7 +20,7 @@ body::before{
     top: 0;
     left: 0;
     position: absolute;
-    background-color: rgba(0,0,0,.6);
+    background-color: rgba(0,0,0,.4);
     z-index: -1;
 }
 
